--- a/css/font/font.css
+++ b/css/font/font.css
@@ -1,11 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @font-face {
-    font-family: 'binggraebold';
-    src: url('binggrae-bold-webfont.eot');
-    src: url('binggrae-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('binggrae-bold-webfont.woff2') format('woff2'),
-         url('binggrae-bold-webfont.woff') format('woff'),
-         url('binggrae-bold-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-
+  font-family: "binggraeregular";
+  src: url("binggrae-webfont.eot");
+  src: url("binggrae-webfont.eot?#iefix") format("embedded-opentype"),
+    url("binggrae-webfont.woff2") format("woff2"),
+    url("binggrae-webfont.woff") format("woff"),
+    url("binggrae-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
