--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,5 @@
-@charset "utf-8";
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  color: #000;
-  text-decoration: none;
-}
-
-img {
-  vertical-align: middle;
-  border: 0;
-}
-
-html {
-  font-size: 16px;
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("font/font.css");
+.wrap {
+  font-family: "binggraeregular";
 }/*# sourceMappingURL=main.css.map */
-body{
-  
-}
