--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
-@charset "utf-8";
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
+@import url("font/font.css");
 * {
   margin: 0;
   padding: 0;
@@ -22,7 +23,47 @@ img {
 
 html {
   font-size: 16px;
-}/*# sourceMappingURL=main.css.map */
-body{
-  
 }
+
+.wrap {
+  position: relative;
+  display: block;
+}
+
+/* 상단 */
+.header .header-inner {
+  position: absolute;
+}
+.header .header-inner .header-top {
+  display: flex;
+  justify-content: flex-end;
+  width: 100vw;
+  height: 30px;
+}
+.header .header-inner .header-top .buy {
+  order: 1;
+  cursor: pointer;
+  margin-right: 20px;
+}
+.header .header-inner .header-top .job {
+  order: 2;
+  cursor: pointer;
+}
+
+.header-bottom .header-bottom-inner {
+  display: flex;
+}
+.header-bottom .header-bottom-inner .logo {
+  justify-content: flex-start;
+  width: 144px;
+  height: 40px;
+  line-height: 40px;
+}
+.header-bottom .header-bottom-inner .nav gnb {
+  justify-content: center;
+}
+.header-bottom .header-bottom-inner .nav .lang {
+  justify-content: flex-end;
+}
+
+/* 비주얼 */
