--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,48 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @import url("font/font.css");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+img {
+  vertical-align: middle;
+  border: 0;
+}
+
+html {
+  font-size: 16px;
+}
+
 .wrap {
   font-family: "binggraeregular";
-}/*# sourceMappingURL=main.css.map */
+}
+
+.cs {
+  position: relative;
+  display: block;
+}
+.cs h4 {
+  font-size: 38px;
+  color: #1f1f1f;
+  text-align: center;
+}
+.cs .cs-wrap {
+  position: relative;
+  display: block;
+  background: #fff;
+  box-shadow: 0px 5px 24.3px 2.7px rgba(0, 0, 0, 0.09);
+}
+.button {
+  cursor: pointer;
+}
