--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,34 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @import url("font/font.css");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+ul {
+  list-style: none;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+img {
+  vertical-align: middle;
+  border: 0;
+}
+
+html {
+  font-size: 16px;
+}
 .wrap {
   font-family: "binggraeregular";
 }
+
+// cs 센터
+@import "scss/cs";
+
+@import "scss/report";
