--- a/css/scss/_cs.scss
+++ b/css/scss/_cs.scss
@@ -1,12 +1,34 @@
-.cs{
-    .cs-top{
-        .top-email{}
-        .top-call{}
+.cs {
+  position: relative;
+  display: block;
+  h4 {
+    font-size: 38px;
+    color: #1f1f1f;
+    text-align: center;
+  }
+  .cs-wrap {
+    position: relative;
+    display: block;
+    background: #fff;
+    box-shadow: 0px 5px 24.3px 2.7px rgb(0 0 0 / 9%);
+  }
+  .cs-top {
+    .top-email {
+      .p {
+      }
+      @at-root .button {
+        cursor: pointer;
+      }
     }
-    .cs-bottom{
-        .faq{
-            @at-root .faq-left{}
-            @at-root .faq-right{}
-        }
+    .top-call {
     }
+  }
+  .cs-bottom {
+    .faq {
+      @at-root .faq-left {
+      }
+      @at-root .faq-right {
+      }
+    }
+  }
 }
