--- a/css/main.css
+++ b/css/main.css
@@ -28,21 +28,39 @@ html {
   font-family: "binggraeregular";
 }
 
+.clearfix::after {
+  content: "";
+  position: relative;
+  display: block;
+  width: 100%;
+  clear: both;
+}
+
 .cs {
   position: relative;
   display: block;
 }
-.cs h4 {
+.cs h3 {
   font-size: 38px;
   color: #1f1f1f;
   text-align: center;
 }
 .cs .cs-wrap {
   position: relative;
-  display: block;
+  display: flex;
+  flex-direction: row;
+  width: 1310px;
+  height: 852px;
   background: #fff;
+  margin: 0 auto;
   box-shadow: 0px 5px 24.3px 2.7px rgba(0, 0, 0, 0.09);
+  border-radius: 30px;
 }
 .button {
   cursor: pointer;
+}
+
+.cs .cs-bottom h4 {
+  position: absolute;
+  left: 20px;
 }
