--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,9 @@ html {
   box-shadow: 0px 5px 24.3px 2.7px rgba(0, 0, 0, 0.09);
   border-radius: 30px;
 }
+.cs .cs-top {
+  display: flex;
+}
 .button {
   cursor: pointer;
 }
