--- a/css/scss/_cs.scss
+++ b/css/scss/_cs.scss
@@ -18,9 +18,9 @@
     border-radius: 30px;
   }
   .cs-top {
+    display: flex;
     .top-email {
-      img {
-      }
+      
     }
     .p {
     }
