--- a/css/scss/_cs.scss
+++ b/css/scss/_cs.scss
@@ -105,6 +105,7 @@
             line-height: 80px;
             a {
               font-size: 18px;
+              font-weight: 700;
             }
           }
         }
@@ -120,6 +121,10 @@
             border-radius: 30px;
             height: 80px;
             line-height: 80px;
+            a {
+              font-size: 18px;
+              font-weight: 700;
+            }
           }
         }
       }
