--- a/css/main.css
+++ b/css/main.css
@@ -2,246 +2,245 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @import url("font/font.css");
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  color: #333;
-  text-decoration: none;
+    color: #333;
+    text-decoration: none;
 }
 
 img {
-  vertical-align: middle;
-  border: 0;
+    vertical-align: middle;
+    border: 0;
 }
 
 html {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 .wrap {
-  font-family: "binggraeregular";
-  margin: 0 auto;
+    font-family: "binggraeregular";
+    margin: 0 auto;
 }
 
 .clearfix::after {
-  content: "";
-  position: relative;
-  display: block;
-  width: 100%;
-  clear: both;
+    content: "";
+    position: relative;
+    display: block;
+    width: 100%;
+    clear: both;
 }
 
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 9999999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999999;
 }
 .header .header-inner {
-  position: absolute;
+    position: absolute;
 }
 
 .header .header-inner .header-top {
-  margin: 0 auto;
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  height: 30px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    height: 30px;
 }
 .header .header-inner .header-top .buy {
-  cursor: pointer;
-  margin-right: 20px;
+    cursor: pointer;
+    margin-right: 20px;
 }
 .header .header-inner .header-top .job {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .header-bottom .header-bottom-inner {
-  display: flex;
-  gap: 0 30rem;
-  justify-content: space-between;
-  margin-top: 20px;
+    display: flex;
+    gap: 0 30rem;
+    justify-content: space-between;
+    margin-top: 20px;
 }
 .header-bottom .header-bottom-inner .nav .gnb {
-  display: flex;
-  justify-content: center;
-  gap: 0 40px;
+    display: flex;
+    justify-content: center;
+    gap: 0 40px;
 }
 .header-bottom .header-bottom-inner .nav .gnb li {
-  white-space: nowrap;
+    white-space: nowrap;
 }
 .header-bottom .header-bottom-inner .nav .gnb li a:hover {
-  display: block;
-  cursor: pointer;
-  color: red;
-  text-decoration: underline;
-  background: url("");
+    display: block;
+    cursor: pointer;
+    color: red;
+    text-decoration: underline;
+    background: url("");
 }
 .header-bottom .header-bottom-inner .nav .gnb li .depth2 {
-  display: none;
+    display: none;
 }
 
 .lang {
-  white-space: nowrap;
-  font-weight: 800;
+    white-space: nowrap;
+    font-weight: 800;
 }
 
 /* 비주얼 */
 .visual .visual-inner {
-  position: relative;
-  position: relative;
-  z-index: -5;
+    position: relative;
+    position: relative;
+    z-index: -5;
 }
 .visual .visual-inner .front {
-  position: absolute;
+    position: absolute;
 }
 .visual .visual-inner .back {
-  position: absolute;
+    position: absolute;
 }
 .visual .visual-inner .back .search {
-  position: relative;
-  display: block;
-  top: 600px;
-  left: 40%;
+    position: relative;
+    display: block;
+    top: 600px;
+    left: 40%;
 }
 .visual .visual-inner .back .search .search-form {
-  position: relative;
+    position: relative;
 }
 .visual .visual-inner .back .search .search-txt {
-  position: absolute;
-  border-radius: 30px;
-  background: white;
-  padding-right: 500px;
-  line-height: 60px;
-  border: 1px solid #fff;
-  box-shadow: 5px 5px 5px 5px rgba(163, 124, 124, 0.5);
+    position: absolute;
+    border-radius: 30px;
+    background: white;
+    padding-right: 500px;
+    line-height: 60px;
+    border: 1px solid #fff;
+    box-shadow: 5px 5px 5px 5px rgba(163, 124, 124, 0.5);
 }
 .visual .visual-inner .back .search .search-bt {
-  border: 0px;
-  border-radius: 20px;
-  background: rgb(231, 79, 79);
-  width: 100px;
-  height: 30px;
-=======
-.cs .cs-wrap {
-  position: relative;
-  display: block;
-  width: 1310px;
-  background: #fff;
-  margin: 0 auto;
-  box-shadow: 0px 5px 24.3px 2.7px rgba(0, 0, 0, 0.09);
-  border-radius: 30px;
-  padding: 60px 45px;
+    border: 0px;
+    border-radius: 20px;
+    background: rgb(231, 79, 79);
+    width: 100px;
+    height: 30px;
+}
+======= .cs .cs-wrap {
+    position: relative;
+    display: block;
+    width: 1310px;
+    background: #fff;
+    margin: 0 auto;
+    box-shadow: 0px 5px 24.3px 2.7px rgba(0, 0, 0, 0.09);
+    border-radius: 30px;
+    padding: 60px 45px;
 }
 .cs .cs-top {
-  display: flex;
+    display: flex;
 }
 .cs .cs-top .top-email {
-  width: 50%;
-  height: 325px;
-  background: url("../../images/layout/sec04_backimg01.png") no-repeat center;
-  background-size: contain;
-  padding: 55px 45px;
+    width: 50%;
+    height: 325px;
+    background: url("../../images/layout/sec04_backimg01.png") no-repeat center;
+    background-size: contain;
+    padding: 55px 45px;
 }
 .cs .cs-top .top-email h4 {
-  font-size: 32px;
-  padding: 0px 0px 30px;
+    font-size: 32px;
+    padding: 0px 0px 30px;
 }
 .cs .cs-top .top-email .advice {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 65px;
-  width: 160px;
-  height: 43px;
-  border-radius: 21.5px;
-  border: solid 1px rgba(224, 223, 226, 0.6);
-  background: red;
-  box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.03);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 65px;
+    width: 160px;
+    height: 43px;
+    border-radius: 21.5px;
+    border: solid 1px rgba(224, 223, 226, 0.6);
+    background: red;
+    box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.03);
 }
 .cs .cs-top .top-email .advice a {
-  color: #fff;
-  font-size: 14px;
-  font-weight: 500;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
 }
 .cs .cs-top .top-call {
-  width: 50%;
-  height: 325px;
-  background: url("../../images/layout/sec04_backimg02.png") no-repeat center;
-  background-size: contain;
-  padding: 55px 45px;
+    width: 50%;
+    height: 325px;
+    background: url("../../images/layout/sec04_backimg02.png") no-repeat center;
+    background-size: contain;
+    padding: 55px 45px;
 }
 .cs .cs-top .top-call h4 {
-  font-size: 32px;
-  padding: 0px 0px 30px;
+    font-size: 32px;
+    padding: 0px 0px 30px;
 }
 .cs .cs-top .top-call .tel {
-  font-size: 46.5px;
-  font-weight: 600;
-  letter-spacing: -2.33px;
-  color: #303030;
+    font-size: 46.5px;
+    font-weight: 600;
+    letter-spacing: -2.33px;
+    color: #303030;
 }
 .cs .cs-top .top-call .time {
-  font-size: 16px;
+    font-size: 16px;
 }
 .cs .cs-top .top-call span {
-  font-size: 16px;
-  color: red;
+    font-size: 16px;
+    color: red;
 }
 
 .cs-bottom {
-  display: block;
+    display: block;
 }
 .cs-bottom .faq h4 {
-  display: flex;
-  justify-content: space-between;
-  padding: 47px 0px 30px;
+    display: flex;
+    justify-content: space-between;
+    padding: 47px 0px 30px;
 }
 .cs-bottom .faq h4 span {
-  color: #1f1f1f;
-  font-size: 23px;
+    color: #1f1f1f;
+    font-size: 23px;
 }
 .cs-bottom .faq h4 a {
-  box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.03);
+    box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.03);
 }
 .cs-bottom .faq .faq-wrap {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 .cs-bottom .faq .faq-wrap .faq-left {
-  width: 48%;
+    width: 48%;
 }
 .cs-bottom .faq .faq-wrap .faq-left ul li {
-  background: #f9f9f9;
-  box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.08);
-  padding: 0 20px;
-  margin-bottom: 10px;
-  border-radius: 30px;
-  height: 80px;
-  line-height: 80px;
+    background: #f9f9f9;
+    box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.08);
+    padding: 0 20px;
+    margin-bottom: 10px;
+    border-radius: 30px;
+    height: 80px;
+    line-height: 80px;
 }
 .cs-bottom .faq .faq-wrap .faq-left ul li a {
-  font-size: 18px;
+    font-size: 18px;
 }
 .cs-bottom .faq .faq-wrap .faq-right {
-  width: 48%;
+    width: 48%;
 }
 .cs-bottom .faq .faq-wrap .faq-right ul li {
-  background: #f9f9f9;
-  box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.08);
+    background: #f9f9f9;
+    box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.08);
 
-  padding: 0 20px;
-  margin-bottom: 10px;
-  border-radius: 30px;
-  height: 80px;
-  line-height: 80px;
-
+    padding: 0 20px;
+    margin-bottom: 10px;
+    border-radius: 30px;
+    height: 80px;
+    line-height: 80px;
 }
