--- a/css/scss/_cs.scss
+++ b/css/scss/_cs.scss
@@ -21,8 +21,7 @@
     .top-email {
       width: 50%;
       height: 325px;
-      background: url("../../images/layout/sec04_backimg01.png") no-repeat
-        center;
+      background: url("../images/layout/sec04_backimg01.png") no-repeat center;
       background-size: contain;
       padding: 55px 45px;
       h4 {
@@ -50,8 +49,7 @@
     .top-call {
       width: 50%;
       height: 325px;
-      background: url("../../images/layout/sec04_backimg02.png") no-repeat
-        center;
+      background: url("../images/layout/sec04_backimg02.png") no-repeat center;
       background-size: contain;
       padding: 55px 45px;
       h4 {
