--- a/css/main.scss
+++ b/css/main.scss
@@ -2,172 +2,161 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @import url("font/font.css");
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  color: #333;
-  text-decoration: none;
+    color: #333;
+    text-decoration: none;
 }
 
 img {
-  vertical-align: middle;
-  border: 0;
+    vertical-align: middle;
+    border: 0;
 }
 
 html {
-  font-size: 16px;
+    font-size: 16px;
 }
 .wrap {
-  font-family: "binggraeregular";
-  
-  margin: 0 auto;
+    font-family: "binggraeregular";
+
+    margin: 0 auto;
 }
-.clearfix::after{
-  content: "";
-  position: relative;
-  display: block;
-  width: 100%;
-  clear: both;
+.clearfix::after {
+    content: "";
+    position: relative;
+    display: block;
+    width: 100%;
+    clear: both;
 }
 
-@import "header";
+@import "./scss/slider";
 
 .header {
- position: fixed;
- top: 0;
- left: 0;
- width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 
+    z-index: 9999999;
+    .header-inner {
+        position: absolute;
 
-  z-index: 9999999;
-  .header-inner {
-   
-    position: absolute;
+        .header-top {
+            margin: 0 auto;
+            display: flex;
+            justify-content: flex-end;
 
-    .header-top {
-      margin: 0 auto;
-      display: flex;
-      justify-content: flex-end;
+            width: 100%;
+            height: 30px;
 
-      width: 100%;
-      height: 30px;
-
-      .buy {
-        cursor: pointer;
-        margin-right: 20px;
-      }
-      .job {
-        cursor: pointer;
-      }
+            .buy {
+                cursor: pointer;
+                margin-right: 20px;
+            }
+            .job {
+                cursor: pointer;
+            }
+        }
     }
-  }
 }
 
 .header-bottom {
-  .header-bottom-inner {
-    display: flex;
-    gap: 0 30rem;
-    justify-content: space-between;
-    margin-top: 20px;
-
-    .nav {
-      .gnb {
+    .header-bottom-inner {
         display: flex;
-        justify-content: center;
+        gap: 0 30rem;
+        justify-content: space-between;
+        margin-top: 20px;
 
-        gap: 0 40px;
+        .nav {
+            .gnb {
+                display: flex;
+                justify-content: center;
 
-        li {
-          white-space: nowrap; 
-          a{
-            &:hover{
-              display: block;
-              cursor: pointer;
-              color: red;
-              text-decoration: underline;
-              background: url("");
+                gap: 0 40px;
 
+                li {
+                    white-space: nowrap;
+                    a {
+                        &:hover {
+                            display: block;
+                            cursor: pointer;
+                            color: red;
+                            text-decoration: underline;
+                            background: url("");
+                        }
+                    }
 
+                    .depth2 {
+                        display: none;
+                    }
+                }
             }
-
-          }
-         
-          .depth2{
-  display: none;
-} 
         }
-       
-      }
     }
-  }
 }
 
 .lang {
-  white-space: nowrap;
-  font-weight: 800;
+    white-space: nowrap;
+    font-weight: 800;
 }
 
 /* 비주얼 */
-@import "visual";
+@import "./scss/visual";
 .visual {
-  .visual-inner {
-    position: relative;
-   
-   
-      position: relative;
-      z-index: -5;
-
-      .front {
-        position: absolute;
-        
-        
-      }
-      .back {
-        position: absolute;
-        
-      .search {
+    .visual-inner {
         position: relative;
-        display: block;
 
-        top: 600px;
-        left: 40%;
+        position: relative;
+        z-index: -5;
 
-        .search-form {
-          position: relative;
+        .front {
+            position: absolute;
         }
-        .search-txt {
-          position: absolute;
+        .back {
+            position: absolute;
 
-          border-radius: 30px;
-          background: white;
-          padding-right: 500px;
-          line-height: 60px;
-          border: 1px solid #fff;
-          box-shadow: 5px 5px 5px 5px rgb(163, 124, 124, 0.5);
+            .search {
+                position: relative;
+                display: block;
+
+                top: 600px;
+                left: 40%;
+
+                .search-form {
+                    position: relative;
+                }
+                .search-txt {
+                    position: absolute;
+
+                    border-radius: 30px;
+                    background: white;
+                    padding-right: 500px;
+                    line-height: 60px;
+                    border: 1px solid #fff;
+                    box-shadow: 5px 5px 5px 5px rgb(163, 124, 124, 0.5);
+                }
+
+                .search-bt {
+                    border: 0px;
+
+                    border-radius: 20px;
+                    background: rgb(231, 79, 79);
+                    width: 100px;
+                    height: 30px;
+                }
+            }
         }
-
-        .search-bt {
-          border: 0px;
-
-          border-radius: 20px;
-          background: rgb(231, 79, 79);
-          width: 100px;
-          height: 30px;
-        }
-      }
     }
-  }
 }
-
+// 슬라이더
+@import "./scss/slider";
 
 // cs 센터
-
-
-
