--- a/css/scss/_slider.scss
+++ b/css/scss/_slider.scss
@@ -1,28 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @import url("font/font.css");
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-ul {
-    list-style: none;
-}
-
-a {
-    color: #333;
-    text-decoration: none;
-}
-
-img {
-    vertical-align: middle;
-    border: 0;
-}
-
-html {
-    font-size: 16px;
-}
 
 .wrap {
     font-family: "binggraeregular";
@@ -46,7 +23,7 @@ html {
     margin: 0 auto;
 }
 .slide-inner-top > h3 {
-    font-size: 38px;
+    font-size: $head-nomal;
 }
 .slide-inner-top .slide-inner-prevbtn {
     position: absolute;
@@ -67,31 +44,31 @@ html {
     justify-content: space-around;
     align-items: center;
     line-height: 20px;
-    margin: 12px 12px;
+    margin: $noaml-ma;
     transition: all 300ms;
 }
 .slide-inner-top .slide-list > li:hover {
     transform: translateY(-30px);
 }
 .slide-inner-top .slide-list > li:hover > a {
-    background: #e5372b;
-    color: white;
+    background: $red-color;
+    color: $white-color;
 }
 .slide-inner-top .slide-list > li > img {
-    margin-bottom: 12px;
+    margin-bottom: $noaml-ma;
 }
 .slide-inner-top .slide-list > li > a {
-    background-color: #f9f9f9;
-    border-radius: 8px;
+    background-color: $gray-color;
+    border-radius: $border-nomal;
     width: 250px;
-    padding: 12px 0;
+    padding: $noaml-pd 0;
 }
 /* qkxja */
 .slide-inner-bottom {
     margin: 0 auto;
 }
 .slide-inner-bottom .slide-inner-prevbtn {
-    color: red;
+    color: $red-color;
     position: absolute;
     top: 520px;
     left: 100px;
@@ -110,16 +87,16 @@ html {
     justify-content: space-around;
     align-items: center;
     line-height: 20px;
-    margin: 12px 12px;
+    margin: $noaml-ma;
     width: 250px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
+    background-color: $gray-color;
+    border-radius: $border-nomal;
     height: 250px;
 }
 .slide-inner-bottom .slide-list > li > img {
-    margin-bottom: 12px;
+    margin-bottom: $noaml-ma;
 
-    padding: 12px 0;
+    padding: $noaml-pd 0;
 }
 
 @media screen and (max-width: 768px) {
