--- a/css/main.css
+++ b/css/main.css
@@ -42,30 +42,6 @@ html {
   clear: both;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  color: #333;
-  text-decoration: none;
-}
-
-img {
-  vertical-align: middle;
-  border: 0;
-}
-
-html {
-  font-size: 16px;
-}
-
 .wrap {
   font-family: "binggraeregular";
 }
@@ -115,7 +91,7 @@ html {
   justify-content: space-around;
   align-items: center;
   line-height: 20px;
-  margin: 12px 12px;
+  margin: 12px;
   transition: all 300ms;
 }
 
@@ -124,8 +100,8 @@ html {
 }
 
 .slide-inner-top .slide-list > li:hover > a {
-  background: #e5372b;
-  color: white;
+  background: #e82c28;
+  color: #fff;
 }
 
 .slide-inner-top .slide-list > li > img {
@@ -145,7 +121,7 @@ html {
 }
 
 .slide-inner-bottom .slide-inner-prevbtn {
-  color: red;
+  color: #e82c28;
   position: absolute;
   top: 520px;
   left: 100px;
@@ -167,7 +143,7 @@ html {
   justify-content: space-around;
   align-items: center;
   line-height: 20px;
-  margin: 12px 12px;
+  margin: 12px;
   width: 250px;
   background-color: #f9f9f9;
   border-radius: 8px;
@@ -309,30 +285,6 @@ html {
   height: 30px;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  color: #333;
-  text-decoration: none;
-}
-
-img {
-  vertical-align: middle;
-  border: 0;
-}
-
-html {
-  font-size: 16px;
-}
-
 .wrap {
   font-family: "binggraeregular";
 }
@@ -382,7 +334,7 @@ html {
   justify-content: space-around;
   align-items: center;
   line-height: 20px;
-  margin: 12px 12px;
+  margin: 12px;
   transition: all 300ms;
 }
 
@@ -391,8 +343,8 @@ html {
 }
 
 .slide-inner-top .slide-list > li:hover > a {
-  background: #e5372b;
-  color: white;
+  background: #e82c28;
+  color: #fff;
 }
 
 .slide-inner-top .slide-list > li > img {
@@ -412,7 +364,7 @@ html {
 }
 
 .slide-inner-bottom .slide-inner-prevbtn {
-  color: red;
+  color: #e82c28;
   position: absolute;
   top: 520px;
   left: 100px;
@@ -434,7 +386,7 @@ html {
   justify-content: space-around;
   align-items: center;
   line-height: 20px;
-  margin: 12px 12px;
+  margin: 12px;
   width: 250px;
   background-color: #f9f9f9;
   border-radius: 8px;
