--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
 @import url("font/font.css");
 * {
   margin: 0;
@@ -45,16 +46,36 @@ html {
   width: 100%;
   z-index: 9999999;
 }
-.header .header-inner {
-  position: absolute;
+.header:hover .header-bg {
+  top: 0;
+  transition: all 0.8s;
 }
-
+.header:hover .depth2 {
+  visibility: visible !important;
+  opacity: 1 !important;
+  transition: visibility 0.8s 0.5s, opacity 0.8s 0.5s;
+}
+.header .header-bg {
+  position: absolute;
+  left: 0;
+  top: -573px;
+  width: 100%;
+  height: 573px;
+  border-radius: 0 0 50px 50px;
+  box-shadow: 0px 2px 9.8px 0.2px rgba(0, 0, 0, 0.08);
+  background-color: #fff;
+}
+.header .header-inner {
+  position: relative;
+}
 .header .header-inner .header-top {
-  margin: 0 auto;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   width: 100%;
   height: 30px;
+  border-bottom: 1px solid #e0e0e0;
+  padding: 0 80px;
 }
 .header .header-inner .header-top .buy {
   cursor: pointer;
@@ -63,185 +84,167 @@ html {
 .header .header-inner .header-top .job {
   cursor: pointer;
 }
-
-.header-bottom .header-bottom-inner {
-  display: flex;
-  gap: 0 30rem;
-  justify-content: space-between;
-  margin-top: 20px;
+.header .header-inner .header-bottom {
+  padding: 0 80px;
+  border-bottom: 1px solid #e0e0e0;
 }
-.header-bottom .header-bottom-inner .nav .gnb {
+.header .header-inner .header-bottom .header-bottom-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header .header-inner .header-bottom .header-bottom-inner .nav {
+  height: 116px;
+}
+.header .header-inner .header-bottom .header-bottom-inner .nav .gnb {
+  position: relative;
   display: flex;
   justify-content: center;
-  gap: 0 40px;
 }
-.header-bottom .header-bottom-inner .nav .gnb li {
+.header .header-inner .header-bottom .header-bottom-inner .nav .gnb > li {
+  position: relative;
+  line-height: 116px;
   white-space: nowrap;
+  padding-right: 70px;
 }
-.header-bottom .header-bottom-inner .nav .gnb li a:hover {
+.header .header-inner .header-bottom .header-bottom-inner .nav .gnb > li:hover > a {
+  color: #e0462e;
+}
+.header .header-inner .header-bottom .header-bottom-inner .nav .gnb > li:hover > a > span::before {
+  content: "";
+  position: absolute;
+  right: -4px;
+  top: -1px;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background: #e0462e;
+}
+.header .header-inner .header-bottom .header-bottom-inner .nav .gnb > li:hover > a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #e0462e;
+}
+.header .header-inner .header-bottom .header-bottom-inner .nav .gnb > li > a {
+  position: relative;
+  display: block;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: "Noto Sans KR", sans-serif;
+}
+.header .header-inner .header-bottom .header-bottom-inner .nav .gnb > li > a:hover {
   display: block;
   cursor: pointer;
-  color: red;
-  text-decoration: underline;
-  background: url("");
+  color: #e0462e;
 }
-.header-bottom .header-bottom-inner .nav .gnb li .depth2 {
-  display: none;
+.header .header-inner .header-bottom .header-bottom-inner .nav .gnb > li > a span {
+  position: relative;
+}
+.header .header-inner .header-bottom .header-bottom-inner .nav .gnb .depth2 {
+  position: absolute;
+  left: 0;
+  top: 130px;
+  visibility: hidden;
+  opacity: 0;
+}
+.header .header-inner .header-bottom .header-bottom-inner .nav .gnb .depth2 li a {
+  padding: 7px 0;
+  display: block;
+  font-size: 18px;
+  line-height: 1.5;
+  text-align: left;
+  letter-spacing: -0.02em;
+  font-family: "Noto Sans KR", sans-serif;
+}
+.header .header-inner .header-bottom .header-bottom-inner .nav .gnb .depth2 li a:hover {
+  display: inline-block;
+  color: #e0462e;
 }
 
 .lang {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   white-space: nowrap;
   font-weight: 800;
 }
+.lang .lang-list {
+  position: relative;
+}
+.lang .lang-list a {
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  letter-spacing: -0.5px;
+  text-transform: uppercase;
+}
+.lang .lang-list a img {
+  margin-left: 5px;
+}
+.lang .lang-list ul {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 30px;
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 10px 0;
+  box-shadow: 0px 3px 7px 0 rgba(0, 0, 0, 0.05);
+}
+.lang .lang-list ul li {
+  padding: 5px 10px;
+  text-transform: uppercase;
+  text-align: center;
+}
+.lang button {
+  position: relative;
+  display: inline-block;
+  width: 26px;
+  height: 22px;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  margin-left: 30px;
+}
+.lang button span {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #000;
+}
+.lang button span:nth-child(1) {
+  top: 0;
+}
+.lang button span:nth-child(2) {
+  top: calc(50% - 1px);
+}
+.lang button span:nth-child(3) {
+  bottom: 0;
+}
 
 /* 비주얼 */
+.visual {
+  position: relative;
+  display: block;
+  background: url("/images/main/pc_section01_3.jpg") no-repeat top;
+  background-size: cover;
+  padding: 180px 0;
+}
 .visual .visual-inner {
+  width: 100%;
   position: relative;
-  position: relative;
-  z-index: -5;
+  text-align: center;
 }
-.visual .visual-inner .front {
-  position: absolute;
-}
-.visual .visual-inner .back {
-  position: absolute;
-}
-.visual .visual-inner .back .search {
-  position: relative;
-  display: block;
-  top: 600px;
-  left: 40%;
-}
-.visual .visual-inner .back .search .search-form {
-  position: relative;
-}
-.visual .visual-inner .back .search .search-txt {
-  position: absolute;
-  border-radius: 30px;
-  background: white;
-  padding-right: 500px;
-  line-height: 60px;
-  border: 1px solid #fff;
-  box-shadow: 5px 5px 5px 5px rgba(163, 124, 124, 0.5);
-}
-.visual .visual-inner .back .search .search-bt {
-  border: 0px;
-  border-radius: 20px;
-  background: rgb(231, 79, 79);
-  width: 100px;
-  height: 30px;
-=======
-.cs .cs-wrap {
-  position: relative;
-  display: block;
-  width: 1310px;
-  background: #fff;
-  margin: 0 auto;
+.visual .visual-inner .search {
+  max-width: 1020px;
+  height: 80px;
+  border-radius: 40px;
   box-shadow: 0px 5px 24.3px 2.7px rgba(0, 0, 0, 0.09);
-  border-radius: 30px;
-  padding: 60px 45px;
-}
-.cs .cs-top {
-  display: flex;
-}
-.cs .cs-top .top-email {
-  width: 50%;
-  height: 325px;
-  background: url("../../images/layout/sec04_backimg01.png") no-repeat center;
-  background-size: contain;
-  padding: 55px 45px;
-}
-.cs .cs-top .top-email h4 {
-  font-size: 32px;
-  padding: 0px 0px 30px;
-}
-.cs .cs-top .top-email .advice {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 65px;
-  width: 160px;
-  height: 43px;
-  border-radius: 21.5px;
-  border: solid 1px rgba(224, 223, 226, 0.6);
-  background: red;
-  box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.03);
-}
-.cs .cs-top .top-email .advice a {
-  color: #fff;
-  font-size: 14px;
-  font-weight: 500;
-}
-.cs .cs-top .top-call {
-  width: 50%;
-  height: 325px;
-  background: url("../../images/layout/sec04_backimg02.png") no-repeat center;
-  background-size: contain;
-  padding: 55px 45px;
-}
-.cs .cs-top .top-call h4 {
-  font-size: 32px;
-  padding: 0px 0px 30px;
-}
-.cs .cs-top .top-call .tel {
-  font-size: 46.5px;
-  font-weight: 600;
-  letter-spacing: -2.33px;
-  color: #303030;
-}
-.cs .cs-top .top-call .time {
-  font-size: 16px;
-}
-.cs .cs-top .top-call span {
-  font-size: 16px;
-  color: red;
-}
-
-.cs-bottom {
-  display: block;
-}
-.cs-bottom .faq h4 {
-  display: flex;
-  justify-content: space-between;
-  padding: 47px 0px 30px;
-}
-.cs-bottom .faq h4 span {
-  color: #1f1f1f;
-  font-size: 23px;
-}
-.cs-bottom .faq h4 a {
-  box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.03);
-}
-.cs-bottom .faq .faq-wrap {
-  display: flex;
-  justify-content: space-between;
-}
-.cs-bottom .faq .faq-wrap .faq-left {
-  width: 48%;
-}
-.cs-bottom .faq .faq-wrap .faq-left ul li {
-  background: #f9f9f9;
-  box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.08);
-  padding: 0 20px;
-  margin-bottom: 10px;
-  border-radius: 30px;
-  height: 80px;
-  line-height: 80px;
-}
-.cs-bottom .faq .faq-wrap .faq-left ul li a {
-  font-size: 18px;
-}
-.cs-bottom .faq .faq-wrap .faq-right {
-  width: 48%;
-}
-.cs-bottom .faq .faq-wrap .faq-right ul li {
-  background: #f9f9f9;
-  box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.08);
-
-  padding: 0 20px;
-  margin-bottom: 10px;
-  border-radius: 30px;
-  height: 80px;
-  line-height: 80px;
-
+  background-color: #fff;
+  margin: 40px auto 0;
 }
