--- a/css/scss/_cs.scss
+++ b/css/scss/_cs.scss
@@ -12,6 +12,7 @@
     width: 1310px;
     background: #fff;
     margin: 0 auto;
+    margin-bottom: 132px;
     box-shadow: 0px 5px 24.3px 2.7px rgb(0 0 0 / 9%);
     border-radius: 30px;
     padding: 60px 45px;
@@ -64,10 +65,10 @@
       }
       .time {
         font-size: 16px;
-      }
-      span {
-        font-size: 16px;
-        color: red;
+        span {
+          font-size: 16px;
+          color: red;
+        }
       }
     }
   }
