--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @import url("font/font.css");
+
 * {
   margin: 0;
   padding: 0;
@@ -27,7 +28,7 @@ html {
 .wrap {
   font-family: "binggraeregular";
 }
-.clearfix::after{
+.clearfix::after {
   content: "";
   position: relative;
   display: block;
@@ -35,6 +36,6 @@ html {
   clear: both;
 }
 // cs 센터
-@import "scss/cs";
-
-@import "scss/report";
+@import "cs";
+// 제보
+@import "report";
