--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,6 @@ html {
   width: 1310px;
   background: #fff;
   margin: 0 auto;
-  margin-bottom: 132px;
   box-shadow: 0px 5px 24.3px 2.7px rgba(0, 0, 0, 0.09);
   border-radius: 30px;
   padding: 60px 45px;
@@ -107,7 +106,7 @@ html {
 .cs .cs-top .top-call .time {
   font-size: 16px;
 }
-.cs .cs-top .top-call .time span {
+.cs .cs-top .top-call span {
   font-size: 16px;
   color: red;
 }
@@ -162,58 +161,4 @@ html {
 .cs-bottom .faq .faq-wrap .faq-right ul li a {
   font-size: 18px;
   font-weight: 700;
-}
-
-.report {
-  position: relative;
-  display: block;
-  width: 1350px;
-  height: auto;
-}
-.report h3 {
-  margin-bottom: 40px;
-  font-size: 38px;
-  color: #1f1f1f;
-  text-align: center;
-}
-.report .report-wrap {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 30px;
-}
-.report .report-wrap .report-left,
-.report .report-wrap .report-right {
-  display: block;
-  border-radius: 30px;
-  background: #f9f9f9 no-repeat center;
-  box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.08);
-  background-size: contain;
-  height: 230px;
-  padding: 78px 25px 58px;
-  cursor: pointer;
-  width: 48.5%;
-  justify-content: center;
-}
-.report .report-wrap .report-left p,
-.report .report-wrap .report-right p {
-  text-align: center;
-  font-size: 20px;
-  line-height: 1.63;
-  letter-spacing: -0.09em;
-}
-.report .report-wrap .report-left span,
-.report .report-wrap .report-right span {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 65px;
-  width: 160px;
-  height: 43px;
-  color: #fff;
-  border-radius: 21.5px;
-  border: solid 1px rgba(224, 223, 226, 0.6);
-  background: red center;
-  background-size: contain;
-  box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.03);
 }
